--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                 <a href="mailto:">support@uxtheme.net</a>
                             </li>
                             <li class="about-item-link-item">
-                                <a href="tel:" class="item-item-link">+133-394-3439-1435</a>
+                                <a href="tel:+133-394-3439-1435" class="item-item-link">+133-394-3439-1435</a>
                             </li>
                         </ul>
                     </a>
